--- a/styling/index.css
+++ b/styling/index.css
@@ -205,6 +205,7 @@ div.gallery {
 	border: 1px solid #ccc;
 	float: left;
 	width: 180px;
+	transition-duration: 0.5s;
 }
   
 div.gallery:hover {
@@ -219,4 +220,8 @@ div.gallery img {
 div.desc {
 	padding: 15px;
 	text-align: center;
+	background-color: #ccc;
+}
+div.desc:hover {
+	border: 2px solid #777;
 }
